Added dog button

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="grabImage()">
+    <script src="/public/app.js"></script>
     <div class="banner">
         <img src="/public/banner.png" alt="Banner Image">
         <h1 style="color:white;">Owens cool Webstie</h1>
+        <button onclick="grabImage()">DOG BUTTON</button>
     </div>
     <img src="/public/profile.png" alt="me">
+    <img id="doggo" alt="Cool Dog">
     <h2>I have good grades and i like shrek</h2>
     <h3>And Lego</h3>
     <h4>I started liking shrek in 2020 when i realized he was hot. now shrek is the love of my life.</h4>
