--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body onload="grabImage()">
-    <script src="/public/app.js"></script>
+    <script src="./app.js"></script>
     <div class="banner">
-        <img src="/public/banner.png" alt="Banner Image">
+        <img src="./public/banner.png" alt="Banner Image">
         <h1 style="color:white;">Owens cool Webstie</h1>
         <button onclick="grabImage()">DOG BUTTON</button>
     </div>
-    <img src="/public/profile.png" alt="me">
+    <img src="./public/profile.png" alt="me">
     <img id="doggo" alt="Cool Dog">
     <h2>I have good grades and i like shrek</h2>
     <h3>And Lego</h3>
